<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"

    tools:context=".ui.RegisterActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp"
            android:paddingHorizontal="20dp"
            android:orientation="vertical"
            >
            <TextView
                android:text="Create Account"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:textColor="#05AF0B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_name"
                app:errorEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="#05AF0B"
                app:hintTextColor="#05AF0B"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/full_name"
                    android:inputType="text"
                    android:drawableStart="@drawable/baseline_account_circle_24"
                    android:drawablePadding="5sp"
                    android:drawableTint="#05AF0B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_email"
                app:errorEnabled="true"
                app:boxStrokeColor="#05AF0B"
                app:hintTextColor="#05AF0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:drawableStart="@drawable/baseline_attach_email_24"
                    android:drawablePadding="5sp"
                    android:drawableTint="#05AF0B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_phonenumber"
                app:errorEnabled="true"
                app:boxStrokeColor="#05AF0B"
                app:hintTextColor="#05AF0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/phone_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:drawableStart="@drawable/baseline_add_call_24"
                    android:drawablePadding="5sp"
                    android:drawableTint="#05AF0B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password"
                app:errorEnabled="true"
                app:boxStrokeColor="#05AF0B"
                app:hintTextColor="#05AF0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:drawableStart="@drawable/key_svgrepo_com"
                    android:drawablePadding="5sp"
                    android:drawableTint="#05AF0B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/register_password_confirm"
                app:errorEnabled="true"
                app:boxStrokeColor="#05AF0B"
                app:hintTextColor="#05AF0B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="10"
                    android:drawableStart="@drawable/key_svgrepo_com"
                    android:drawablePadding="5sp"
                    android:drawableTint="#05AF0B"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
            <CheckBox
                android:id="@+id/register_agree"
                android:text="I agree "
                android:textSize="14sp"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/register_btn"
                    android:text="Register"
                    android:layout_marginHorizontal="5dp"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="Alrealy have a Account?"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textColor="#05AF0B"
                    android:layout_marginLeft="5sp"
                    android:text="Login"
                    android:textSize="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </LinearLayout>


    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>